--- a/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
@@ -238,6 +238,41 @@
       <version>1.1</version>
     </dependency>
 
+    <!-- XmlRpc -->
+    <dependency>
+      <groupId>org.apache.xmlrpc</groupId>
+      <artifactId>xmlrpc-common</artifactId>
+      <version>3.1</version>
+      <exclusions>
+        <!-- We need to explicitely exclude JUnit since WS Common 1.0.1 used by XMLRPC Commons is
+             having an invalid compile time dependency on it.
+             See JIRA issue: http://jira.codehaus.org/browse/MEV-567 -->
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.xmlrpc</groupId>
+      <artifactId>xmlrpc-server</artifactId>
+      <version>3.1</version>
+      <exclusions>
+        <!-- We need to explicitely exclude JUnit since xmlrpc Server depends transitively
+             on Apache WS Common which wrongly defines a compile dependency on JUnit.
+             See JIRA issue: http://jira.codehaus.org/browse/MEV-567 -->
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+        <!-- We want to choose the SLF4J binding only when XWiki is packaged. -->
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
     <!-- HTML Export/PDF Export -->
     <dependency>
       <groupId>org.xwiki.platform</groupId>
@@ -372,6 +407,11 @@
     <dependency>
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-velocity-webapp</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-xmlrpc-model</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
@@ -883,6 +923,12 @@
               **/web/XWikiURLFactory.java,
               **/web/XWikiURLFactoryServiceImpl.java,
               **/web/XWikiURLFactoryService.java,
+              **/xmlrpc/DomainObjectFactory.java,
+              **/xmlrpc/XWikiUtils.java,
+              **/xmlrpc/XWikiXmlRpcApiImpl.java,
+              **/xmlrpc/XWikiXmlRpcServlet.java,
+              **/xmlrpc/XWikiXmlRpcURLFactory.java,
+              **/xmlrpc/XWikiXmlRpcUser.java,
               <!-- Small Fan-Out complexity issue but it would need a big refactor to be fixed. -->
               **/stats/impl/xwiki/XWikiStatsReader.java
           </excludes>
