--- a/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-default/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-default/pom.xml
@@ -30,7 +30,7 @@
   <artifactId>xwiki-platform-lesscss-default</artifactId>
   <name>XWiki Platform - LESS CSS - Default</name>
   <packaging>jar</packaging>
-  <description>Default implementation for XWiki Platform - LESS CSS - API</description>
+  <description>Default implementation for XWiki Platform - LESS CSS - Default Implementation</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.80</xwiki.jacoco.instructionRatio>
      <!-- Old names of this module used for retro compatibility when resolving dependencies of old extensions -->
