[Misc] Better name for the Stub of Velocity Manager + moved to a better package.

--- a/xwiki-platform-core/xwiki-platform-rendering/xwiki-platform-rendering-macros/xwiki-platform-rendering-macro-velocity/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-rendering/xwiki-platform-rendering-macros/xwiki-platform-rendering-macro-velocity/pom.xml
@@ -51,7 +51,6 @@
       <artifactId>xwiki-platform-rendering-xwiki</artifactId>
       <version>${project.version}</version>
     </dependency>
-
     <!-- Testing dependencies -->
     <dependency>
       <groupId>org.xwiki.rendering</groupId>
@@ -92,7 +91,7 @@
             </goals>
             <configuration>
               <includes>
-                <include>**/MockVelocityManager.class</include>
+                <include>**/StubVelocityManager.class</include>
                 <include>**/component*.txt</include>
               </includes>
             </configuration>
