[misc] Fix test-jar regex

--- a/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
@@ -605,7 +605,7 @@
             </goals>
             <configuration>
               <includes>
-                <include>**/test/*.class</include>
+                <include>**/test/**/*.class</include>
               </includes>
             </configuration>
           </execution>
