XCOMMONS-341: Upgrade to Restlet 2.3.5 and JAX-RS 2

--- a/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-api/pom.xml
@@ -34,8 +34,7 @@
   <dependencies>
     <dependency>
       <groupId>javax.ws.rs</groupId>
-      <artifactId>jsr311-api</artifactId>
-      <version>1.0</version>
+      <artifactId>javax.ws.rs-api</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.mail</groupId>
