--- a/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-api/pom.xml
@@ -34,7 +34,7 @@
   <dependencies>
     <dependency>
       <groupId>javax.ws.rs</groupId>
-      <artifactId>javax.ws.rs-api</artifactId>
+      <artifactId>jsr311-api</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.mail</groupId>
