--- a/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-server/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-server/pom.xml
@@ -94,6 +94,13 @@
           <artifactId>stax-api</artifactId>
           <groupId>stax</groupId>
         </exclusion>
+        <!-- Restlet triggers the wrong version of JAX-RS.
+             See https://github.com/restlet/restlet-framework-java/issues/1158
+        -->
+        <exclusion>
+          <artifactId>javax.ws.rs-api</artifactId>
+          <groupId>javax.ws.rs</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
