XWIKI-12393: Better scalability solution for the breadcrumb when there are lots of levels.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -4017,6 +4017,9 @@ rating.four-stars=Very good
 rating.five-stars=Excellent
 rating.votes=Votes
 
+## Hierarchy
+web.hierarchy.error=Failed to get the full hierarchy.
+
 ###############################################################################
 ## Deprecated
 ## Note: each element should be removed when the last branch using it is no longer supported
