XWIKI-12713: Title column of the Document Macro should be labelled Title and not Page

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3044,7 +3044,7 @@ platform.index.doc.location=Location
 platform.index.doc.space=Space
 platform.index.doc.date=Date
 platform.index.doc.author=Last Author
-platform.index.doc.title=Page
+platform.index.doc.title=Title
 platform.index.doc.fullName=Page
 platform.index._actions=Actions
 platform.index.emptyvalue=
