XCOMMONS-863: Commons/Rendering/Platform fail to build with the Clover profile * Fixed Platform

--- a/pom.xml
+++ b/pom.xml
@@ -164,4 +164,14 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>clover</id>
+      <properties>
+        <!-- Don't check that unit tests don't output anything to the console since for example Clover will output
+             messages such as "Updating existing database at '...'." during tests! -->
+        <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
+      </properties>
+    </profile>
+  </profiles>
 </project>
