XWIKI-12199: Add the ability to create an application in a nested space * Add a location picker on the first step of AWM wizard * Rewrite the JavaScript code of the first step with jQuery * Display the data/code space using the #hierarchy macro * Clean the AppWithinMinutes.Translations document: new translation keys should be put here; we can't move the existings keys from oldcore yet because we loose their translations * Modify the AWM wizard to support creating/editing an application located in a nested space * Small fix in #locationPicker macro: the passed id was not taken into account; also use silent notation for placeholders

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2656,11 +2656,11 @@ platform.appwithinminutes.wizardStepHelpDescription=This wizard will guide you t
 ### Wizard Step 1: Application Name
 platform.appwithinminutes.appNamePageTitle=Create Application
 platform.appwithinminutes.appNameLabel=Application Name
-platform.appwithinminutes.appNameHint=The name of the application determines the URL of the application home page, the space where application data will be stored as well as the name of the class that will describe the application structure.
+platform.appwithinminutes.appNameHint=The name of the application determines the URL of the application home page, the location where the application code and data will be stored as well as the name of the class that will describe the application structure.
 platform.appwithinminutes.appNameInvalidClassNameError=We can't extract a valid class name from the application name you entered. Make sure you include letters in the application name besides digits and punctuation signs.
 platform.appwithinminutes.appNamePreviewHomePageUrlLabel=Application home page URL
-platform.appwithinminutes.appNamePreviewDataSpaceLabel=Application data space
-platform.appwithinminutes.appNamePreviewCodeSpaceLabel=Application code space
+platform.appwithinminutes.appNamePreviewDataSpaceLabel=Application data location
+platform.appwithinminutes.appNamePreviewCodeSpaceLabel=Application code location
 platform.appwithinminutes.appNamePreviewClassReferenceLabel=Application class
 platform.appwithinminutes.appNameIsUsedWarning=This application already exists. If you go to the next step you will be editing the existing application.
 platform.appwithinminutes.appNameEmptyError=Please enter the application name.
