XWIKI-12275: Add support for Nested Documents in the Template Provider UI - Changed the layout of AdminTemplatesSheet to two responsive columns - Using a document picker when creating template providers - Using a checkbox tree when editing a template provider and specifying the spaces where it should be available -- Displaying the selected spaces for a template provider as a list of breadcrumbs in view mode -- Converted the js code from Prototype to RequiredJS + jQuery

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3241,8 +3241,8 @@ xe.templateprovider.templatetype.info=Whether this template should be used for c
 xe.templateprovider.template=Template to use
 xe.templateprovider.template.edit=Edit
 xe.templateprovider.template.example=Example: XWiki.MyTemplate
-xe.templateprovider.spaces=List of spaces where the template must be available
-xe.templateprovider.spaces.info=If no space is selected the template will be available in any space 
+xe.templateprovider.spaces=List of locations where the template must be available
+xe.templateprovider.spaces.info=If no location is selected, the template will be available from any location
 xe.templateprovider.backtoadmin=Go back to the Wiki Administration
 xe.templateprovider.action=Action on create
 xe.templateprovider.action.info=The action to execute when the create button is pushed, you can configure here whether the new page is saved before it is opened for edition or not.
