XWIKI-12204: Add support for nested spaces in the XClass application * XClass app is now using the livetable.

--- a/xwiki-platform-core/xwiki-platform-xclass/xwiki-platform-xclass-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-xclass/xwiki-platform-xclass-ui/pom.xml
@@ -61,5 +61,12 @@
       <version>${rendering.version}</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-livetable-ui</artifactId>
+      <version>${project.version}</version>
+      <scope>runtime</scope>
+      <type>xar</type>
+    </dependency>
   </dependencies>
 </project>
