XWIKI-12599: Introduce Children and Siblings Panels in replacement of SpaceDocs Panel * Make sure it won't happen again (the missing hidden=true part) :)

--- a/xwiki-platform-core/xwiki-platform-panels/xwiki-platform-panels-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-panels/xwiki-platform-panels-ui/pom.xml
@@ -132,6 +132,7 @@
           <contentPages combine.self="override"/>
           <technicalPages>
             <technicalPage>EditTranslations\.xml</technicalPage>
+            <technicalPage>(?!Translation.*\.xml).*\.xml</technicalPage>
           </technicalPages>
         </configuration>
       </plugin>
