XWIKI-12734: Extract the documentTree macro in its own module - Created xwiki-platform-index/xwiki-platform-index-tree with the submodules: -- macro (xar) -- test-pageobjects (DocumentTreeElement)

--- a/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-ui/pom.xml
@@ -45,9 +45,10 @@
       <type>xar</type>
       <scope>runtime</scope>
     </dependency>
+    <!-- Used by the XWiki.Treeview document. -->
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-tree-macro</artifactId>
+      <artifactId>xwiki-platform-index-tree-macro</artifactId>
       <version>${project.version}</version>
       <type>xar</type>
       <scope>runtime</scope>
@@ -78,21 +79,6 @@
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-rendering-wikimacro-store</artifactId>
       <version>${project.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <!-- Used to check access rights for tree nodes. -->
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-security-script</artifactId>
-      <version>${project.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <!-- The document tree macro uses FontAwesome for the node icons. -->
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-icon-fontawesome</artifactId>
-      <version>${project.version}</version>
-      <type>xar</type>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
