--- a/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-tree/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-tree/pom.xml
@@ -24,22 +24,27 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-core</artifactId>
+    <artifactId>xwiki-platform-index</artifactId>
     <version>7.3-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-index</artifactId>
-  <name>XWiki Platform - Index - Parent POM</name>
+  <artifactId>xwiki-platform-index-tree</artifactId>
+  <name>XWiki Platform - Index - Tree - Parent POM</name>
+  <description>XWiki Platform - Index - Tree - Parent POM</description>
   <packaging>pom</packaging>
-  <description>XWiki Platform - Index - Parent POM</description>
+    <properties>
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+  </properties>
   <modules>
-    <module>xwiki-platform-index-ui</module>
-    <module>xwiki-platform-index-tree</module>
+    <module>xwiki-platform-index-tree-macro</module>
   </modules>
   <profiles>
     <profile>
       <id>integration-tests</id>
       <modules>
-        <module>xwiki-platform-index-test</module>
+        <module>xwiki-platform-index-tree-test</module>
       </modules>
     </profile>
   </profiles>
