XWIKI-12734: Extract the documentTree macro in its own module - Decoupled DocumentPicker from DocumentPickerModal and moved DocumentPicker to xwiki-platform-test-ui since it's now a key part in the framework. - Moved DocumentPickerModal to xwiki-platform-index-tree-test-pageobjects to be used optionally - Made xwiki-platform-administration depend only on the new xwiki-platform-index-tree module and not the entire index app - CreatePagePage now uses the DocumentPicker, so no more code duplication there -- TODO: Do the same for CopyPage - Added some methods to the Tree page objects - Fixed administration tests

--- a/xwiki-platform-core/xwiki-platform-administration/xwiki-platform-administration-test/xwiki-platform-administration-test-pageobjects/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-administration/xwiki-platform-administration-test/xwiki-platform-administration-test-pageobjects/pom.xml
@@ -41,5 +41,10 @@
       <artifactId>xwiki-platform-test-ui</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-index-tree-test-pageobjects</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
