--- a/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-server/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-server/pom.xml
@@ -72,7 +72,17 @@
           <artifactId>stax-api</artifactId>
           <groupId>javax.xml.stream</groupId>
         </exclusion>
+        <!-- We use a more accurate and up to date JSON framework version -->
+        <exclusion>
+          <artifactId>org.restlet.lib.org.json</artifactId>
+          <groupId>org.restlet.jse</groupId>
+        </exclusion>
       </exclusions>
+    </dependency>
+    <!-- Replace the version triggered by restlet by a more accurate and up to date one -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
     </dependency>
     <dependency>
       <!-- We need Jackson for a proper JSON representation of our REST resources.
