XCOMMONS-874: Verify that WebPreferences page have the correct title XWIKI-12759: Provide a descriptive title for WebPreferences pages

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2163,6 +2163,7 @@ admin.customize=Customize
 admin.save=Save
 admin.defaultwikinotinstalled=Your wiki seems empty. You may want to import the default XWiki Enterprise wiki which contains a set of useful pages: user profiles, recent activity, administration pages and many more. This wiki is distributed as a XAR file, you can download it from {0}.
 admin.adminappnotinstalled=The administration application is not installed. Since XWiki Enterprise 1.5 the Administration is distributed as an application. You can download it from {0}.
+admin.preferences.title=Preferences
 admin.analytics=Google Analytics\u2122
 admin.analytics.description=Configure the Google Analytics\u2122 account.
 admin.analytics.account.description=To enable page view tracking in Google Analytics\u2122, enter your Google Analytics\u2122 account here. You may enter more accounts (space separated) to track pages in multiple accounts.
@@ -3199,7 +3200,6 @@ xe.themes.colors.wizard.close=Close
 xe.themes.colors.wizard.undo=Undo
 
 xe.xwiki.space=XWiki
-xe.xwiki.space.preferences=XWiki Space Preferences
 xe.xwiki.administration=Administration application
 xe.xwiki.administration.install=This page and its children contain internal content used by XWiki for its own use. It also currently contains the User Profile pages. You can administer your wiki through the {0}.
 
@@ -5070,6 +5070,13 @@ core.rename.newpage.hint=Name of the renamed page
 #######################################
 
 platform.dashboard.wiki.spaces=Spaces
+
+#######################################
+## until 7.3RC1
+#######################################
+
+## Replaced with the more generic admin.preferences.title key used for all WebPreferences page titles.
+xe.xwiki.space.preferences=XWiki Space Preferences
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
