XWIKI-12276: Add a new 'terminal' xproperty in TemplateProviderClass - Terminal vs non-terminal status is resolved in the create action in 3 main steps: -- 1. Request parameter "tocreate" values "terminal" or "nonterminal" -- 2. Value of the "terminal" property of the template provider specified in the request. --- 2.1 If the template provider does not have a "terminal" property specified, backwards compat mode: ---- the "type" property is inspected: "space" => nonterminal; "page" or NULL => terminal ---- Note: the TemplateProviderClassTemplate's object sets the "terminal" property to "No" to make sure we default to non-terminal documents in the UI, but for backwards compat reasons, we are defaulting to terminal documents in the code, so that we interpret old template providers as creating terminal documents, which was the case in the past. -- 3. Current page --- 3.1 Existing page, defaults to nonterminal --- 3.2 New page ---- 3.2.1 WebHome => nonterminal ---- 3.2.2 Non-WebHome => terminal
- Updated the create UI to (un/)check the terminal checkbox when switching between page types (template providers), based on the value of the "terminal" property.

- Added more unit tests for the create action

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3246,6 +3246,8 @@ xe.templateprovider.spaces.info=If no location is selected, the template will be
 xe.templateprovider.backtoadmin=Go back to the Wiki Administration
 xe.templateprovider.action=Action on create
 xe.templateprovider.action.info=The action to execute when the create button is pushed, you can configure here whether the new page is saved before it is opened for edition or not.
+xe.templateprovider.terminal=Terminal Page
+xe.templateprovider.terminal.hint=Whether or not to create terminal documents by default when using this template provider.
 
 xe.welcome.edit=Edit welcome message
 
