XWIKI-12741: The application code and data spaces should be nested inside the application space * Add two helper methods in the ModelScriptService and EntityReference * Don't filter the class name any more (because the nested parent spaces may contain special characters anyway). * Add a 'dataSpace' property to the LiveTableClass to store the location of the application entries. * Stop using the MetadataClass for new applications. * Make sure the translation keys are escaped in the generated translation document * Ensure backwards compatibility as much as possible (e.g. be able to edit an old application, keep old applications working)

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2658,7 +2658,6 @@ platform.appwithinminutes.wizardStepHelpDescription=This wizard will guide you t
 platform.appwithinminutes.appNamePageTitle=Create Application
 platform.appwithinminutes.appNameLabel=Application Name
 platform.appwithinminutes.appNameHint=The name of the application determines the URL of the application home page, the location where the application code and data will be stored as well as the name of the class that will describe the application structure.
-platform.appwithinminutes.appNameInvalidClassNameError=We can't extract a valid class name from the application name you entered. Make sure you include letters in the application name besides digits and punctuation signs.
 platform.appwithinminutes.appNamePreviewHomePageUrlLabel=Application home page URL
 platform.appwithinminutes.appNamePreviewDataSpaceLabel=Application data location
 platform.appwithinminutes.appNamePreviewCodeSpaceLabel=Application code location
@@ -5079,6 +5078,9 @@ platform.dashboard.wiki.spaces=Spaces
 
 ## Replaced with the more generic admin.preferences.title key used for all WebPreferences page titles.
 xe.xwiki.space.preferences=XWiki Space Preferences
+
+## The restrictions on the class name have been dropped. 
+platform.appwithinminutes.appNameInvalidClassNameError=We can't extract a valid class name from the application name you entered. Make sure you include letters in the application name besides digits and punctuation signs.
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
