--- a/xwiki-platform-core/xwiki-platform-ldap/xwiki-platform-ldap-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-ldap/xwiki-platform-ldap-test/pom.xml
@@ -24,23 +24,20 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-core</artifactId>
+    <artifactId>xwiki-platform-ldap</artifactId>
     <version>7.3-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-ldap</artifactId>
-  <name>XWiki Platform - LDAP - Parent POM</name>
+  <artifactId>xwiki-platform-ldap-test</artifactId>
+  <name>XWiki Platform - LDAP - Tests - Parent POM</name>
   <packaging>pom</packaging>
+  <description>Tests for the LDAP authenticator</description>
+  <properties>
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+  </properties>
   <modules>
-    <module>xwiki-platform-ldap-authenticator</module>
-    <module>xwiki-platform-ldap-api</module>
-    <module>xwiki-platform-ldap-ui</module>
+    <module>xwiki-platform-ldap-test-tests</module>
   </modules>
-  <profiles>
-    <profile>
-      <id>integration-tests</id>
-      <modules>
-        <module>xwiki-platform-ldap-test</module>
-      </modules>
-    </profile>
-  </profiles>
 </project>
