XWIKI-12277: Remove the 'type' xproperty from TemplateProviderClass - Deprecated the translations for the type property

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3235,8 +3235,6 @@ xe.templateprovider.name.example=Example: My Template Provider
 xe.templateprovider.templatename=Template Name
 xe.templateprovider.templatename.example=Example: My Template
 xe.templateprovider.templatename.info=You can fill in a translation key to allow internationalization of this template name
-xe.templateprovider.templatetype=Template type
-xe.templateprovider.templatetype.info=Whether this template should be used for creating generic pages or is specific to space homepages
 xe.templateprovider.template=Template to use
 xe.templateprovider.template.edit=Edit
 xe.templateprovider.template.example=Example: XWiki.MyTemplate
@@ -5081,6 +5079,10 @@ xe.xwiki.space.preferences=XWiki Space Preferences
 
 ## The restrictions on the class name have been dropped. 
 platform.appwithinminutes.appNameInvalidClassNameError=We can't extract a valid class name from the application name you entered. Make sure you include letters in the application name besides digits and punctuation signs.
+
+## The "type" property has been removed and data migrated to the new "terminal" property.
+xe.templateprovider.templatetype=Template type
+xe.templateprovider.templatetype.info=Whether this template should be used for creating generic pages or is specific to space homepages
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
