XWIKI-11548: Failing to find the Office Server install location on a 64bit Linux (Fedora) system - Fixed the display of the server path value when not set and not autodetected

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2846,6 +2846,7 @@ xe.officeimporter.openoffice.actions.restart=Restart server
 xe.officeimporter.openoffice.update=Update
 xe.officeimporter.openoffice.limitedcontrol=The Office Server can only be controlled from the main wiki
 platform.office.importDocumentOverwriteConfirmation=The target document exists. Are you sure you want to overwrite its content?
+office.configuration.serverpath.error.notSetNotAutodetected=Not set / Not autodetected
 
 ### Panels application
 xe.panels.classedit.youare=You are editing
