[misc] fix typo

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3996,7 +3996,7 @@ platform.extension.distributionWizard.extensionsStepDescription=Extensions provi
 
 ### Logging Application Resources
 admin.logging=Logging
-logging.admin.intro=Here you can review and modify the log level associated to a registered logger. <default> or empty log level means that the logger inherits from it's parent logger which is the package prefix when it's a package or the default level in the logger implementation configuration if there is no parent.
+logging.admin.intro=Here you can review and modify the log level associated to a registered logger. <default> or empty log level means that the logger inherits from its parent logger which is the package prefix when it's a package or the default level in the logger implementation configuration if there is no parent.
 logging.admin.livetable.actions.set=Set
 logging.admin.livetable.logger=Logger
 logging.admin.livetable.level=Level
